--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+I used StackOverflow, Youtube, and I worked with Miggy and Mabeyda on this assignment. 
+
+
 # PyCity Schools Analysis
 
 - The datasets provide data on a school district, covering 15 high schools. The dataset includes data on each schools' budget, size of the student body, as well as data on the students attending the high schools in the district. We have their name, gender, grade, attending high school, and math and reading scores on what I assume to be a standardized test. 
